[project]
name = "my_language_modeling"
description = "Masked Language Modeling, Causal Language Modeling with Transformers"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Dowon", email = "ks2515@naver.com"}
]

[project.urls]
repository = "https://github.com/Bing-su/my_language_modeling"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["A", "B", "C4", "E", "F", "I001", "N", "PT", "UP", "W"]
ignore = ["B008", "B905", "E501", "UP007"]
unfixable = ["F401"]
